@@ -1,3 +1,8 @@
+29 June 2009: Wouter
+	- patch for use of Linux IPV6_MTU option, so that on linux the default
+	  EDNS UDP size advertised becomes 4096 over IPv6.  It fragments the
+	  packets using the IPv6 minimum MTU.
+
 15 June 2009: Matthijs
 	- Add configure option, that allows to return FORMERR when receiving EDNS0
 		query with UDP limit < 1220.
